--- a/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
@@ -254,8 +254,8 @@
             //DEMO
             function BtnDemo() {
 
-            $('#Name').val("恆佑")
-            $('#Email').val("ask@yahoo.com.tw")
+            $('#Name').val("陳小華")
+                $('#Email').val("msit143-1customer@outlook.com")
             $('#Phone').val("0966666666")
             $('#Password1').val("a77777777")
             $('#Password2').val("a77777777")
