--- a/MIST143_Traveler/Views/CustomerCenter/Forgetpas.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Forgetpas.cshtml
@@ -34,7 +34,7 @@
     <script>
         function demo()
         {
-            $("#fgmail").val("planettravelermsit143@outlook.com")
+            $("#fgmail").val("msit143-1customer@outlook.com")
         }
 
 
