--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -6,9 +6,9 @@
 @using MIST143_Traveler.ViewComponents
 @section Styles{
     <link href="~/css/客服中心.css" rel="stylesheet" />
-
+    <link href="~/css/會員中心/我的最愛卡片.css" rel="stylesheet" />
     <link href="~/css/會員中心/會員中心左邊選項.css" rel="stylesheet" />
-
+    
 }
 
 
