--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -101,8 +101,8 @@
         //    'You clicked the button!',
         //    'success'
         //)
-        act.value = "miyol311@yahoo.com.tw";
-        pas.value = "12345678";
+        act.value = "msit143-1customer@outlook.com";
+        pas.value = "a77777777";
         }
 
 
