--- a/MIST143_Traveler/wwwroot/css/會員中心/我的最愛卡片.css
+++ b/MIST143_Traveler/wwwroot/css/會員中心/我的最愛卡片.css
@@ -1,12 +1,7 @@
 ﻿/* 開始複製，注意一開始*{}代表全部margin、padding歸0 */
 
 
-/*.card {
-    margin: 0 auto;
-    margin: 2px;
-    border-radius: 4px;
-}
-*/
+
 .asd {
     display: flex;
     align-content: center;
@@ -21,9 +16,14 @@
 .card {
    /* margin: 0 auto;*/
     width: 210px;
-  /*  height: 310px;*/
+    transition:all .5s;
 }
-
+.card:hover{
+    transform:scale(1.05);
+    box-shadow:0 0 6px rgba(255,102,0,1);
+    top: 0px;
+    border:none;
+}
 
 
 .cd
@@ -45,150 +45,7 @@
     -webkit-box-orient: vertical;
 }
 
-/*.title {
-    width: 145px;
-    position: relative;
-    top: 390%;
-    left: 13%;
-    font-size: 20px;
-    color: #fff;
-    z-index: 2;
-    font-weight: 600;
-}
 
-.explore {
-    font-size: 16px;
-    color: #fff;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: center;
-    align-items: center;
-    margin-top: 6px;
-    position: relative;
-    top: 378%;
-    left: 13%;
-}*/
-/*
-.page-activity-recommend-score {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    height: 17px;
-    line-height: 17px;
-    font-size: 12px;
-}*/
-/*
-.page-activity-recommend-score-number {
-    border-radius: 8px;
-    color: #ff9c00;
-    font-weight: 500;
-    flex-shrink: 0;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    margin-right: 2px;
-}*/
-
-/*.svg-icon {
-    fill: currentColor;
-}
-
-.page-activity-recommend-review-number {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-}
-
-.review-number {
-    display: inline-block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}*/
-
-/*.activity-card-bottom {
-    padding-top: 12px;
-}
-
-.activity-card-price-box.small-card {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    -webkit-box-align: start;
-    align-items: flex-start;
-}*/
-
-/*.dynamic-width-price {
-    margin-bottom: 2px;
-}*/
-
-/*.activity-card-price-box__sell-price {
-    font-size: 16px;
-    line-height: 23px;
-    color: #212121;
-    font-weight: 600;
-}
-
-.activity-card-price-box__underline-price {
-    font-size: 14px;
-    line-height: 20px;
-    color: #757575;
-    text-decoration: line-through;
-}*/
-/*
-    
-.tagging-wrap {
-    overflow: hidden;
-}
-
-.bottom-tag {
-    margin-top: 4px;
-    height: 20px;
-}
-
-.tagging-box {
-    display: -webkit-box;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.small-style
-.tagging-tag:last-of-type {
-    margin-right: 0;
-}
-
-.tagging-tag_custom {
-    box-sizing: border-box;
-    display: -webkit-box;
-    display: flex;
-    height: 20px;
-    line-height: 18px;
-    border: 1px solid #ff5b00;
-    font-size: 12px;
-    color: #fff;
-    background-color: #ff5b00;
-    border-radius: 4px;
-    font-weight: 500;
-}
-
-.tagging-tag_text {
-    box-sizing: border-box;
-    padding: 0 10px;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: pre-wrap;
-    word-break: break-all;
-}
-*/
 .cardimg-top {
     margin: 0 auto;
     position: absolute;
@@ -205,171 +62,3 @@
     height: 20px;
 }
 
-/*.experience-menu-name {*/
-    /*   
-    margin: auto;
-    padding: 10px;
-    height: 20px;*/
-    /*width: 54px;
-    text-align: center;
-    margin: 40px auto;
-    display: inline-block;
-    padding: 20px 10px;*/
-    /*    line-height: 30px;*/
-/*}*/
-
-/*.rwd-experience-header-main-container {
-    position: relative;
-    margin: 0 auto;
-    height: 100%;
-    color: #fff;
-    width: 1160px;
-}
-
-    .rwd-experience-header-main-container .rwd-header-container {
-        position: absolute;
-        left: 0;
-        top: 50%;
-        -webkit-transform: translateY(-50%);
-        transform: translateY(-50%);
-    }
-
-.experience-title-and-location-button {
-    position: relative;
-    margin: 0 auto;
-    height: 143px;
-    color: #fff;
-    width: 967px;
-}
-
-.experiences-title {
-    font-size: 44px;
-    line-height: 1.18;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    display: -webkit-inline-box;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-}
-
-.experiences-title-text {
-    margin-right: 8px;
-}
-
-.experience-title-and-location-button .experiences-tips {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    margin-top: 4px;
-    color: #fff;
-}
-
-.experience-title-and-location-button .location-select-button {
-    margin-top: 20px;
-    display: -webkit-box;
-    display: flex;
-}
-
-.location-select-button .location-select-button_main {
-    position: relative;
-}
-
-    .location-select-button .location-select-button_main .location-select-button_main-select {
-        border-radius: 99rem;
-        padding: 8px 16px;
-        height: 44px;
-        background-color: #fff;
-        font-size: 14px;
-        color: #212121;
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-pack: start;
-        justify-content: flex-start;
-        -webkit-box-align: center;
-        align-items: center;
-        cursor: pointer;
-    }
-
-    .location-select-button .location-select-button_main .location-select-button_main-wrap {
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-pack: start;
-        justify-content: flex-start;
-        -webkit-box-align: center;
-        align-items: center;
-        width: 132px;
-        height: 44px;
-    }
-
-.svg-icon {
-    fill: currentColor;
-    width: 16px;
-    height: 16px;
-}
-
-.desktop {*/
-    /*display: flex;*/
-    /*margin-top: 20px;
-    margin: auto;
-    font-size: 14px;
-    font-weight: 400;*/
-    /*line-height: 16.1px;*/
-/*}
-
-.rwd-header-search-box-desktop {
-    margin-top: 20px;
-}
-
-.header-search-box-desktop .input-box .search[data-v-5dcd2723] {
-    margin: 0 4px;
-    width: 140px;
-}
-
-[type=reset], [type=submit], button, html [type=button] {
-    -webkit-appearance: button;
-}
-
-[type=button], [type=reset], [type=submit], button {
-    -webkit-appearance: button;
-}
-
-.klk-button-primary {
-    color: #fff;
-    background-color: #ff5b00;
-    border: 1px solid #ff5b00;
-}
-
-.klk-button {
-    min-width: 86px;
-    display: inline-block;
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 500;
-    border-radius: 6px;
-    padding: 10px 20px;
-    margin: 0;
-    margin-left: auto;
-    text-align: center;
-    line-height: 22px;
-    outline: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    text-transform: none;
-    text-decoration: none;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.
