--- a/MIST143_Traveler/Views/Shopping/PayData.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayData.cshtml
@@ -152,7 +152,7 @@
                                     <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].Count" value="@Model._CShoppingCartDetailViewModel[i].Count" />
                                     <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].Price" value="@Model._CShoppingCartDetailViewModel[i].Price" />
                                     <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].Productpicture" value="@Model._CShoppingCartDetailViewModel[i].Productpicture" />
-                                    <input type="text" class="memberNameInput" asp-for="_CShoppingCartDetailViewModel[i].AccompanyPeople" value="" />
+                                    <input type="hidden" class="memberNameInput" asp-for="_CShoppingCartDetailViewModel[i].AccompanyPeople" value="" />
                                 }
                                 <input type="submit" value="前往付款" class="btn btn-main " />
                             </div>
