--- a/MIST143_Traveler/Views/Home/ContactCenter.cshtml
+++ b/MIST143_Traveler/Views/Home/ContactCenter.cshtml
@@ -42,8 +42,8 @@
     </div>
     <!-- Page Header End -->
     <!-- 查詢訂單三蘭Contact Start -->
-    <div class="container-xxl py-3">
-        <div class="container">
+    <div class="container-xxl col-md-12 py-3">
+        <div class="container col-md-12">
             <div class="text-center mx-auto mb-5 wow fadeInUp"
                  data-wow-delay="0.1s"
                  style="max-width: 1000px">
