--- a/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
+++ b/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
@@ -76,8 +76,9 @@
     <form action="~/TransportationPage/TransportationHomePage" method="post">
         <div class="d-flex justify-content-center" >
             <div class="置中">
-                <input type="text" name="keyword" style="width:600px" placeholder="請輸入國家目的地" />
-                <input type="submit" class="btn btn-warning" value="搜尋"  onsubmit="myButton()" />
+                <input type="text" name="keyword" style="width:600px" placeholder="請輸入旅遊方式或國家目的地" />
+                <input type="submit" class="btn btn-warning" value="搜尋" onsubmit="myButton()" />
+                <input type="submit" class="btn btn-warning" value="DEMO" onsubmit="myButton()" style="margin-left:15px" />
             </div>
         </div>
 
