--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -364,11 +364,11 @@
                     }
                 )
             }*@
-            $(function () {
-                $("#datepicker").datepicker("min"= new Date:0)
+            //$(function () {
+            //    $("#datepicker").datepicker("min"= new Date:0)
                 
 
-            });
+            //});
             
             $("#btn").click(function () {
                 var qq = $("#text").val()
