--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -39,11 +39,10 @@
 <article class="payContainer">
     <form method="post" action="PayEnd" id="payType">
         <input type="hidden" name="MembersId" value="@Model.MembersId" />
+        <input type="hidden" name="MemberName" value="@Model.MemberName" />
+        <input type="hidden" name="Phone" value="@Model.Phone" />
+        <input type="hidden" name="Email" value="@Model.Email" />
         <input type="hidden" name="PaymethodId" value="1" />
-        @if (Model.AccompanyPeople != null)
-        {
-            <input type="hidden" name="AccompanyPeople" value="@Model.AccompanyPeople" />
-        }
         <input type="hidden" name="CouponId" class="couponIdInput" value="0" />
         <input type="hidden" name="CouponListId" class="couponListId" value="0" />
         @for (int i = 0; i < Model._CShoppingCartDetailViewModel.Count; i++)
