--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -89,7 +89,8 @@
     <script>
         function Demo()
         {
-            $("#Actemail").val("planettravelermsit143@outlook.com")
+            $("#Actemail").val("d555@gmail.com")
+            $("#Pas").val("a1234567")
         }
 
     const DemoValue = () => {
