--- a/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
+++ b/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
@@ -76,9 +76,9 @@
     <form action="~/TransportationPage/TransportationHomePage" method="post">
         <div class="d-flex justify-content-center" >
             <div class="置中">
-                <input type="text" name="keyword" style="width:600px" placeholder="請輸入旅遊方式或國家目的地" />
+                <input type="text" name="keyword" style="width:600px" placeholder="請輸入旅遊方式或國家目的地" id="searcha"/>
                 <input type="submit" class="btn btn-warning" value="搜尋" onsubmit="myButton()" />
-                <input type="submit" class="btn btn-warning" value="DEMO" onsubmit="myButton()" style="margin-left:15px" />
+                <input type="button" class="btn btn-warning" value="DEMO" onsubmit="myButton()" style="margin-left:15px" id="demo" onclick="search()"/>
             </div>
         </div>
 
@@ -424,6 +424,12 @@
         });
     </script>
     <script src="./017.js"></script>
+    <script>
+     
+            function search() {
+                $("#searcha").val("韓國")
+            }
+    </script>     
     <!-- //收折頁尾 -->
 </body>
 
